--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ All associated data will be permanently deleted upon confirmation.
 
 <h2>Privacy Policy</h2>
 <p>
-<a href="https://matchbridge/privacy">View Privacy Policy</a>
+<a href="privacy.html">View Privacy Policy</a>
 </p>
 
 <h2>Company Information</h2>
